--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ evaluation/*
 !evaluation/plot.sh
 !evaluation/show-plot.py
 result_*
-
+perf.*
+.env
 
 ########## Folders ##########
 backup
 log_backup
+external
 
