setup and run script update

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-AI_EDGE_TORCH_PATH="external/ai-edge-torch"
-TENSORFLOW_PATH="external/tensorflow"
+AI_EDGE_TORCH_PATH="ai-edge-torch"
+TENSORFLOW_PATH="tensorflow"
 PROMPT_PATH="prompt"
 MODEL_PATH="models"
+EXTERNAL_PATH="external" # default
+# EXTERNAL_PATH="/home/rtos/workspace/ghpark" # for jenkins
+ROOT_PATH=$(pwd)
