--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-AI_EDGE_TORCH_PATH="ai-edge-torch"
-TENSORFLOW_PATH="tensorflow"
+ROOT_PATH=$(pwd)
+EXTERNAL_PATH="/home/rtos/workspace/ghpark" # for jenkins
+# EXTERNAL_PATH="${ROOT_PATH}/external" # default
+AI_EDGE_TORCH_PATH="${EXTERNAL_PATH}/ai-edge-torch"
+TENSORFLOW_PATH="${EXTERNAL_PATH}/tensorflow"
 PROMPT_PATH="prompt"
 MODEL_PATH="models"
-EXTERNAL_PATH="external" # default
-# EXTERNAL_PATH="/home/rtos/workspace/ghpark" # for jenkins
-ROOT_PATH=$(pwd)
